# Masterkeys

./: .gitignore  CMakeLists.txt  README.md
data/: masterkeys_pro_us_l.layout  masterkeys_pro_us_m.layout  masterkeys_pro_us_s.layout  masterkeys_pro_us_shared_alphanumeric.layout  masterkeys_pro_us_shared_alphanumeric_ids.layout  masterkeys_pro_us_shared_multimedia.layout  masterkeys_pro_us_shared_multimedia_ids.layout  masterkeys_pro_us_shared_numpad.layout
docs/: keyboard_layout.xlsx  layout.txt
sdk/: SDKDLL.h
src/: KeyData.h  KeyboardCanvas.cpp  KeyboardCanvas.h  KeyboardLayout.cpp  KeyboardLayout.h  KeyboardLoader.cpp  KeyboardLoader.h  KeyboardManager.cpp  KeyboardManager.h  main.cpp
src/effects/: CrosshairKeyboardEffect.h  KeyboardEffect.h  LockKeysKeyboardEffect.h  RainDropsKeyboardEffect.h  SolidBackgroundAdjustKeyboardEffect.h  SolidBackgroundKeyboardEffect.h  WaveSimulationKeyboardEffect.h
src/sdk/: MasterkeysSdk.cpp  MasterkeysSdk.h
src/utils/: ColorUtils.h  Geometry.h  StringUtils.h  Utils.h
